# OxFunc

./: .gitignore  AGENTS.md  CHARTER.md  CURRENT_BLOCKERS.md  Cargo.toml  OPERATIONS.md  README.md  TUX1000_PLAN.md
.beads/: config.yaml  issues.jsonl
crates/oxfunc_core/: Cargo.toml
crates/oxfunc_core/examples/: w29_finance_probe.rs  w37_xirr_large_root_probe.rs  w87_xirr_adjacent_probe.rs
crates/oxfunc_core/src/: capability.rs  coercion.rs  function.rs  host_info.rs  lib.rs  locale_format.rs  registry.rs  registry_context_seed.rs  registry_help_seed.rs  registry_signature_seed.rs  resolver.rs  semantic_kernel.rs  surface_call.rs  value.rs  xll_export_specs.rs
crates/oxfunc_core/src/functions/: a1_refs.rs  abs.rs  abs_surface.rs  acos.rs  acosh.rs  acot.rs  acoth.rs  adapters.rs  aggregate_common.rs  amor_depreciation_family.rs  and_fn.rs  arabic_fn.rs  array_text_split_family.rs  asin.rs  asinh.rs  atan.rs  atan2.rs  atanh.rs  avedev_fn.rs  average.rs  averagea_fn.rs  base_fn.rs  bessel_convert_family.rs  beta_gamma_stats_family.rs  binary_numeric.rs  bit_common.rs  bitand_fn.rs  bitlshift_fn.rs  bitor_fn.rs  bitrshift_fn.rs  bitxor_fn.rs  bond_core_family.rs  call_register_id_family.rs  callable_helpers.rs  callable_stage1_prepared.rs  cashflow_rate_family.rs  ceiling_floor_family.rs  cell.rs  chi_f_t_family.rs  choose_ifs_family.rs  (+215 more)
crates/oxfunc_core/tests/: direct_call_array_input_seams_integration.rs  oxfml_grouped_aggregation_adapter_integration.rs  oxfml_image_return_carrier_integration.rs  oxfml_registered_external_interface_integration.rs  oxfml_seam_integration.rs
crates/oxfunc_core/tests/fixtures/: oxfunc_adapter_function_corpus.json  w050_oxfunc_admitted_fixture_cases.json  w050_oxfunc_pinned_fixture_corpus.json
docs/: BEADS.md  HISTORY.md  (+8 more)
smart-fuzzer/tools/pmt_ppmt_local_eval/: Cargo.toml
smart-fuzzer/tools/pmt_ppmt_local_eval/src/: main.rs
tools/fp-probe/xll/fp_edge_xll/: Cargo.toml  build.rs
tools/fp-probe/xll/fp_edge_xll/native/: registration_bridge.cpp
tools/fp-probe/xll/fp_edge_xll/src/: lib.rs
tools/xll-addin/oxfunc_xll/: Cargo.toml  build.rs  export_specs.csv
tools/xll-addin/oxfunc_xll/native/: registration_bridge.cpp
tools/xll-addin/oxfunc_xll/src/: lib.rs
(+1278 files in other folders)
