[package]
name = "oxfunc_core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "oxfunc_core"
path = "src/lib.rs"

[dependencies]
libm = "0.2"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"

[dev-dependencies]
oxfml_core = { path = "../../../OxFml/crates/oxfml_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
