[package]
name = "pmt_ppmt_local_eval"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
oxfunc_core = { path = "../../../crates/oxfunc_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "pmt_ppmt_local_eval"
path = "src/main.rs"

[[bin]]
name = "expanded_finance_explorer"
path = "src/bin/expanded_finance_explorer.rs"

[[bin]]
name = "array_tranche_local_eval"
path = "src/bin/array_tranche_local_eval.rs"
