[package]
name = "oxfunc_xll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
oxfunc_core = { path = "../../../crates/oxfunc_core" }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[build-dependencies]
cc = "1.2"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[workspace]
